Change site by matched Site when user load not the main page. User get message to its email if it want to recover password and get message when registered as well.

--- a/media/package.json
+++ b/media/package.json
@@ -92,6 +92,7 @@
     "js-cookie": "^2.1.4",
     "jshint": "^2.9.4",
     "prop-types": "^15.5.8",
+    "react-dropzone": "^3.13.3",
     "react-fade-in": "^0.1.4",
     "react-html-parser": "^1.0.3",
     "react-redux": "^5.0.4",
@@ -99,8 +100,11 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "rimraf": "^2.5.4",
     "semantic-ui-react": "^0.68.3",
+    "superagent": "^3.5.2",
     "susy": "^2.2.12",
     "symbol-observable": "^1.0.4",
     "whatwg-fetch": "^2.0.3"
