I've fixed the request to the minecraft server's status and made a validation of recaptcha.

--- a/GamingFun/theme/package.json
+++ b/GamingFun/theme/package.json
@@ -99,8 +99,10 @@
     "jshint": "^2.9.5",
     "prop-types": "^15.5.8",
     "react": "^15.6.1",
+    "react-async-script": "^0.9.1",
     "react-dropzone": "^4.0.0",
     "react-fade-in": "^0.1.4",
+    "react-google-recaptcha": "^0.9.7",
     "react-html-parser": "^1.0.3",
     "react-recaptcha": "^2.3.3",
     "react-redux": "^5.0.4",
