--- a/GamingFun/theme/package.json
+++ b/GamingFun/theme/package.json
@@ -25,13 +25,14 @@
     }
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
+    "babel-cli": "^6.24.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
@@ -107,6 +108,8 @@
     "react-recaptcha": "^2.3.3",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.2",
+    "react-router-transition": "^0.1.1",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-thunk": "^2.2.0",
